--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         <article class="cards">
           <figure class="card">
             <img
-              src="./assets/natural.jpg"
+              data-src="./assets/natural.jpg"
+              class="lazy"
               alt="Nature"
               width="200"
               height="200"
@@ -109,7 +110,8 @@
           </figure>
           <figure class="card">
             <img
-              src="./assets/any.jpg"
+              data-src="./assets/any.jpg"
+              class="lazy"
               alt="Any"
               width="200"
               height="200"
@@ -119,7 +121,8 @@
           </figure>
           <figure class="card">
             <img
-              src="./assets/teach.jpg"
+              data-src="./assets/teach.jpg"
+              class="lazy"
               alt="Tech"
               width="200"
               height="200"
@@ -129,7 +132,8 @@
           </figure>
           <figure class="card">
             <img
-              src="./assets/animals.jpg"
+              data-src="./assets/animals.jpg"
+              class="lazy"
               alt="Animals"
               width="200"
               height="200"
@@ -139,7 +143,8 @@
           </figure>
           <figure class="card">
             <img
-              src="./assets/people.jpg"
+              data-src="./assets/people.jpg"
+              class="lazy"
               alt="People"
               width="200"
               height="200"
@@ -149,7 +154,8 @@
           </figure>
           <figure class="card">
             <img
-              src="./assets/arch.jpg"
+              data-src="./assets/arch.jpg"
+              class="lazy"
               alt="Architecture"
               width="200"
               height="200"
